# dl_master

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: adjacencia_edges.csv  graph_embeddings.csv  static_features_tft.csv  tft_config.json
notebooks/: preprocess_infodengue.ipynb  preprocess_shape_files.ipynb  previsoes_dengue_2026.csv  testes.ipynb
notebooks/lightning_logs/version_0/: events.out.tfevents.1764440417.zuilhosePC.27776.0
notebooks/lightning_logs/version_1/: events.out.tfevents.1764441314.zuilhosePC.27776.1
notebooks/lightning_logs/version_10/: events.out.tfevents.1764444544.zuilhosePC.27776.10
notebooks/lightning_logs/version_11/: events.out.tfevents.1764551489.zuilhosePC.22256.0
notebooks/lightning_logs/version_12/: events.out.tfevents.1764551513.zuilhosePC.22256.1
notebooks/lightning_logs/version_13/: events.out.tfevents.1764551611.zuilhosePC.22256.2
notebooks/lightning_logs/version_14/: events.out.tfevents.1764553127.zuilhosePC.22256.3
notebooks/lightning_logs/version_15/: events.out.tfevents.1764553141.zuilhosePC.22256.4
notebooks/lightning_logs/version_16/: events.out.tfevents.1764553161.zuilhosePC.22256.5
notebooks/lightning_logs/version_17/: events.out.tfevents.1764553182.zuilhosePC.22256.6
notebooks/lightning_logs/version_18/: events.out.tfevents.1764553208.zuilhosePC.22256.7
notebooks/lightning_logs/version_19/: events.out.tfevents.1764553968.zuilhosePC.22256.8
notebooks/lightning_logs/version_2/: events.out.tfevents.1764441797.zuilhosePC.27776.2
src/: eda.py  fizx_preprocess.py  graph_embedding.py  inference_dataset.py  models.py  train.py  viz.py
(+50 files in other folders)
