[tool.poetry]
name = "dl-master"
version = "0.1.0"
description = "Deep Learning with TFT and TDA for Dengue Forecasting"
authors = ["Zuilho Segundo <segundozuilho@gmail.com>"]
readme = "README.md"
package-mode = false  # <--- ADICIONE ESTA LINHA AQUI

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "*"
pytorch-forecasting = "*"
giotto-tda = "*"
pandas = "*"
numpy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
statsmodels = "*"
geopandas = "^1.1.1"
notebook = "^7.5.0"
pyarrow = "^22.0.0"
torch-geometric = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"